[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_dialog_manager"
version = "0.2.2"
description = "A Python package for managing LLM chat conversation history"
readme = "README.md"
authors = [{ name = "xihajun", email = "work@2333.fun" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.7"
dependencies = [
    "openai>=1.54.2",
    "anthropic>=0.39.0",
    "google-generativeai>=0.1.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.0.0",
    "uuid>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.9.1",
    "isort>=5.12.0",
]
test = [
    "pytest>=6.0",
    "pytest-asyncio>=0.14.0",
    "pytest-cov>=2.0",
]
lint = [
    "black>=22.0",
    "isort>=5.0",
]
all = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.9.1",
    "isort>=5.12.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/xihajun/llm_dialog_manager/issues"
"Documentation" = "https://github.com/xihajun/llm_dialog_manager#readme"
"Source Code" = "https://github.com/xihajun/llm_dialog_manager"

[tool.setuptools]
packages = ["llm_dialog_manager"]